@@ -1,5 +1,10 @@
 2008-04-08  David Gilbert  <david.gilbert@object-refinery.com>
 
+    * source/org/jfree/chart/renderer/xy/HighLowRenderer.java
+    (findRangeBounds): New method override.
+
+2008-04-08  David Gilbert  <david.gilbert@object-refinery.com>
+
     * source/org/jfree/chart/renderer/xy/CandlestickRenderer.java
     (findRangeBounds): New method override,
     * source/org/jfree/data/general/DatasetUtilities.java
